--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,7 @@
 <body>  
     <div class="container">
         <div class="recipe-img">
-            <img src="https://www.allrecipes.com/thmb/8fe_5pLNz2eHcpknNhL52fdq5hE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/25473-the-perfect-basic-burger-DDMFS-4x3-56eaba3833fd4a26a82755bcd0be0c54.jpg" alt="Spinach Waffle">
+            <img src="burger.jpg" alt="Spinach Waffle">
         </div>
 
         <div class="recipe-information">
